--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,13 @@ environment:
 dependencies:
   firebase_auth: ^5.4.0
   firebase_core: ^3.10.0
+  confetti: ^0.8.0 # confettit on the page
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1 # main Riverpod package
   go_router: ^14.6.3 # simplifies navigation and routing
   riverpod_annotation: ^2.6.1 # enables code generation
+  flutter_svg: ^2.0.17 # provides the ability to load svg
 
 dev_dependencies:
   flutter_test:
@@ -37,3 +39,7 @@ flutter:
           weight: 500
         - asset: assets/fonts/Roboto-Bold.ttf
           weight: 700
+
+  # Bring in image assets
+  assets:
+    - assets/images/
