jw-implement-authentication  (#14)
- Implement authentication
- Create user features
- Create car features

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,16 +17,20 @@ dependencies:
   go_router: ^14.6.3 # simplifies navigation and routing
   riverpod_annotation: ^2.6.1 # enables code generation
   flutter_svg: ^2.0.17 # provides the ability to load svg
+  json_annotation: ^4.9.0 # enables code generation for json_serializable
+  cloud_firestore: ^5.6.3 # enables to use Firebase Cloudstore
+  crypto: ^3.0.6 # generates unique string securely
   carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-  build_runner: ^2.4.13 # handles code generation. used with riverpod_annotaion, json_serializable, or freezed packages
+  build_runner: ^2.4.13 # handles code generation. used with riverpod_annotaion, json_serializable packages
   riverpod_generator: ^2.6.3 # enables code generation for providers when used in conjunction with build_runner
   custom_lint: ^0.7.0 # allows defining custom lint rules
   riverpod_lint: ^2.6.3 # provides pre-defined lint rules specifically for Riverpod
+  json_serializable: ^6.9.0 # generate JSON serialization code in data model
 
 flutter:
   uses-material-design: true
