--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flame_riverpod: ^5.4.9
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flame_tiled: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -55,4 +56,4 @@ flutter:
   # Bring in image assets
   assets:
     - assets/images/
-    - assets/images/mini_game/cars/playerCar.png
+    - assets/tiles/
