--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flame_riverpod: ^5.4.9
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  kiosk_mode: ^0.6.0
 
 dev_dependencies:
   flutter_test:
