add sounds and fix many bugs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   hive_flutter: ^1.1.0
   flame_tiled: ^2.0.1
   kiosk_mode: ^0.6.0
+  flame_audio: ^2.11.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -58,3 +60,5 @@ flutter:
   assets:
     - assets/images/
     - assets/tiles/
+    - assets/audio/
+    - assets/audio/background_music.mp3
